Vectorize.Domain/Parser/VectorizeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ../../grammar/Vectorize.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Vectorize.Domain.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class VectorizeParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		WS=39, INT=40, FLOAT=41, STRING=42, BOOL=43, ID=44, LINECMT=45;
	public const int
		RULE_program = 0, RULE_function = 1, RULE_funcparam = 2, RULE_funccall = 3, 
		RULE_vardef = 4, RULE_type = 5, RULE_statement = 6, RULE_blockstmt = 7, 
		RULE_vardefstmt = 8, RULE_varassignstmt = 9, RULE_expressionstmt = 10, 
		RULE_forstmt = 11, RULE_ifstmt = 12, RULE_whilestmt = 13, RULE_returnstmt = 14, 
		RULE_expression = 15;
	public static readonly string[] ruleNames = {
		"program", "function", "funcparam", "funccall", "vardef", "type", "statement", 
		"blockstmt", "vardefstmt", "varassignstmt", "expressionstmt", "forstmt", 
		"ifstmt", "whilestmt", "returnstmt", "expression"
	};

	private static readonly string[] _LiteralNames = {
		null, "'fn'", "'('", "','", "')'", "'->'", "'['", "']'", "':'", "'let'", 
		"'='", "'int'", "'float'", "'bool'", "'string'", "';'", "'{'", "'}'", 
		"'for'", "'if'", "'else'", "'while'", "'return'", "'++'", "'--'", "'!'", 
		"'*'", "'/'", "'%'", "'+'", "'-'", "'<'", "'<='", "'>'", "'>='", "'=='", 
		"'!='", "'&&'", "'||'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "WS", "INT", "FLOAT", "STRING", "BOOL", "ID", "LINECMT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Vectorize.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static VectorizeParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public VectorizeParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public VectorizeParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public FunctionContext[] function() {
			return GetRuleContexts<FunctionContext>();
		}
		public FunctionContext function(int i) {
			return GetRuleContext<FunctionContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVectorizeVisitor<TResult> typedVisitor = visitor as IVectorizeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 32; function();
				}
				}
				State = 35;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionContext : ParserRuleContext {
		public IToken array;
		public ITerminalNode ID() { return GetToken(VectorizeParser.ID, 0); }
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public FuncparamContext[] funcparam() {
			return GetRuleContexts<FuncparamContext>();
		}
		public FuncparamContext funcparam(int i) {
			return GetRuleContext<FuncparamContext>(i);
		}
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVectorizeVisitor<TResult> typedVisitor = visitor as IVectorizeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(Context, State);
		EnterRule(_localctx, 2, RULE_function);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37; Match(T__0);
			State = 38; Match(ID);
			State = 39; Match(T__1);
			State = 48;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 40; funcparam();
				State = 45;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__2) {
					{
					{
					State = 41; Match(T__2);
					State = 42; funcparam();
					}
					}
					State = 47;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			State = 50; Match(T__3);
			State = 57;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__4) {
				{
				State = 51; Match(T__4);
				State = 52; type();
				State = 55;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__5) {
					{
					State = 53; _localctx.array = Match(T__5);
					State = 54; Match(T__6);
					}
				}

				}
			}

			State = 59; statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncparamContext : ParserRuleContext {
		public IToken array;
		public ITerminalNode ID() { return GetToken(VectorizeParser.ID, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public FuncparamContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcparam; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.EnterFuncparam(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.ExitFuncparam(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVectorizeVisitor<TResult> typedVisitor = visitor as IVectorizeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncparam(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncparamContext funcparam() {
		FuncparamContext _localctx = new FuncparamContext(Context, State);
		EnterRule(_localctx, 4, RULE_funcparam);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61; Match(ID);
			State = 62; Match(T__7);
			State = 63; type();
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__5) {
				{
				State = 64; _localctx.array = Match(T__5);
				State = 65; Match(T__6);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunccallContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(VectorizeParser.ID, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public FunccallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funccall; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.EnterFunccall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.ExitFunccall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVectorizeVisitor<TResult> typedVisitor = visitor as IVectorizeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunccall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunccallContext funccall() {
		FunccallContext _localctx = new FunccallContext(Context, State);
		EnterRule(_localctx, 6, RULE_funccall);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68; Match(ID);
			State = 69; Match(T__1);
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__24) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << BOOL) | (1L << ID))) != 0)) {
				{
				State = 70; expression(0);
				State = 75;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__2) {
					{
					{
					State = 71; Match(T__2);
					State = 72; expression(0);
					}
					}
					State = 77;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			State = 80; Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VardefContext : ParserRuleContext {
		public IToken array;
		public ExpressionContext size;
		public ExpressionContext initial;
		public ITerminalNode ID() { return GetToken(VectorizeParser.ID, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public VardefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vardef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.EnterVardef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.ExitVardef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVectorizeVisitor<TResult> typedVisitor = visitor as IVectorizeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVardef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VardefContext vardef() {
		VardefContext _localctx = new VardefContext(Context, State);
		EnterRule(_localctx, 8, RULE_vardef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82; Match(T__8);
			State = 83; Match(ID);
			State = 84; Match(T__7);
			State = 85; type();
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__5) {
				{
				State = 86; _localctx.array = Match(T__5);
				State = 88;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__24) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << BOOL) | (1L << ID))) != 0)) {
					{
					State = 87; _localctx.size = expression(0);
					}
				}

				State = 90; Match(T__6);
				}
			}

			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__9) {
				{
				State = 93; Match(T__9);
				State = 94; _localctx.initial = expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.EnterType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.ExitType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVectorizeVisitor<TResult> typedVisitor = visitor as IVectorizeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 10, RULE_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public BlockstmtContext blockstmt() {
			return GetRuleContext<BlockstmtContext>(0);
		}
		public VardefstmtContext vardefstmt() {
			return GetRuleContext<VardefstmtContext>(0);
		}
		public VarassignstmtContext varassignstmt() {
			return GetRuleContext<VarassignstmtContext>(0);
		}
		public FunccallContext funccall() {
			return GetRuleContext<FunccallContext>(0);
		}
		public IfstmtContext ifstmt() {
			return GetRuleContext<IfstmtContext>(0);
		}
		public ForstmtContext forstmt() {
			return GetRuleContext<ForstmtContext>(0);
		}
		public WhilestmtContext whilestmt() {
			return GetRuleContext<WhilestmtContext>(0);
		}
		public ReturnstmtContext returnstmt() {
			return GetRuleContext<ReturnstmtContext>(0);
		}
		public ExpressionstmtContext expressionstmt() {
			return GetRuleContext<ExpressionstmtContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVectorizeVisitor<TResult> typedVisitor = visitor as IVectorizeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 12, RULE_statement);
		try {
			State = 110;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 99; blockstmt();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 100; vardefstmt();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 101; varassignstmt();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 102; funccall();
				State = 103; Match(T__14);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 105; ifstmt();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 106; forstmt();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 107; whilestmt();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 108; returnstmt();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 109; expressionstmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockstmtContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockstmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blockstmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.EnterBlockstmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.ExitBlockstmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVectorizeVisitor<TResult> typedVisitor = visitor as IVectorizeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockstmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockstmtContext blockstmt() {
		BlockstmtContext _localctx = new BlockstmtContext(Context, State);
		EnterRule(_localctx, 14, RULE_blockstmt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112; Match(T__15);
			State = 116;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__8) | (1L << T__15) | (1L << T__17) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << BOOL) | (1L << ID))) != 0)) {
				{
				{
				State = 113; statement();
				}
				}
				State = 118;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 119; Match(T__16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VardefstmtContext : ParserRuleContext {
		public VardefContext vardef() {
			return GetRuleContext<VardefContext>(0);
		}
		public VardefstmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vardefstmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.EnterVardefstmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.ExitVardefstmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVectorizeVisitor<TResult> typedVisitor = visitor as IVectorizeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVardefstmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VardefstmtContext vardefstmt() {
		VardefstmtContext _localctx = new VardefstmtContext(Context, State);
		EnterRule(_localctx, 16, RULE_vardefstmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121; vardef();
			State = 122; Match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarassignstmtContext : ParserRuleContext {
		public ExpressionContext index;
		public ExpressionContext value;
		public ITerminalNode ID() { return GetToken(VectorizeParser.ID, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public VarassignstmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varassignstmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.EnterVarassignstmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.ExitVarassignstmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVectorizeVisitor<TResult> typedVisitor = visitor as IVectorizeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarassignstmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarassignstmtContext varassignstmt() {
		VarassignstmtContext _localctx = new VarassignstmtContext(Context, State);
		EnterRule(_localctx, 18, RULE_varassignstmt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124; Match(ID);
			State = 129;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__5) {
				{
				State = 125; Match(T__5);
				State = 126; _localctx.index = expression(0);
				State = 127; Match(T__6);
				}
			}

			State = 131; Match(T__9);
			State = 132; _localctx.value = expression(0);
			State = 133; Match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionstmtContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ExpressionstmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressionstmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.EnterExpressionstmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.ExitExpressionstmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVectorizeVisitor<TResult> typedVisitor = visitor as IVectorizeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressionstmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionstmtContext expressionstmt() {
		ExpressionstmtContext _localctx = new ExpressionstmtContext(Context, State);
		EnterRule(_localctx, 20, RULE_expressionstmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135; expression(0);
			State = 136; Match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ForstmtContext : ParserRuleContext {
		public VardefContext vardef() {
			return GetRuleContext<VardefContext>(0);
		}
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public ForstmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_forstmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.EnterForstmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVectorizeListener typedListener = listener as IVectorizeListener;
			if (typedListener != null) typedListener.ExitForstmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVectorizeVisitor<TResult> typedVisitor = visitor as IVectorizeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForstmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ForstmtContext forstmt() {
		ForstmtContext _localctx = new ForstmtContext(Context, State);
		EnterRule(_localctx, 22, RULE_forstmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138; Match(T__17);
			State = 139; Match(T__1);
			State = 140; vardef();
			State = 141; Match(T__14);
			State = 142; expression(0);
			State = 143; Match(T__14);
			State = 144; expression(0);
			State = 145; Match(T__3);
			State = 146; statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
